--- a/app/views/users/account/payment.scala.html
+++ b/app/views/users/account/payment.scala.html
@@ -39,7 +39,7 @@ user
 
                                  </div>
                                  <div class="form-row">
-                                     <label><span class="rc">*</span>QQ号：</label>
+                                     <label><span class="rc">*</span>微信号：</label>
                                      <input type="text" class="base-input" name="weixin" id="weixin" value='@alipayForm("weixin").value'>
 
                                  </div>
