--- a/public/assets/css/template/user.css
+++ b/public/assets/css/template/user.css
@@ -23,7 +23,7 @@ html {
 }
 
 
-/*user utils.global css style*/
+/*user common.global css style*/
 /*user nav start*/
 .u-nav {
     margin-bottom: 12px
