--- a/app/views/forums/forum.scala.html
+++ b/app/views/forums/forum.scala.html
@@ -1,4 +1,5 @@
 @(user:Option[models.user.User],page:Page[models.forum.Topic],wenTopics:List[(Long, String, String, Long, String, Int, Int, Int)],zhiTopics:List[(Long, String, String, Long, String, Int, Int, Int)],users:List[models.user.User],advert:models.advert.Advert)
+@import _root_.utils.Utils
 @views.html.template(
 user,
 nav="forum",
@@ -91,11 +92,9 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
 <li class="clearfix">
     <div class="col-left">
         <div class="re-count">@item.replyNum</div>
-        <!--<div class="re-count">30<span class="fs12 gc"> / 2045</span></div>-->
         <a class="u-reply g-daren" href="@controllers.users.routes.Users.home(item.uid)" target="_blank">
             <span class="inlineblock ofh">@item.uname</span>
         </a>
-        <!--<span class="gc">@controllers.DateFormat(item.addTime.get)</span>-->
     </div>
     <div class="col-right">
         <div class="topic-row clearfix">
@@ -127,7 +126,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
                     <!--<i class="i-daren">达人</i>-->
                 </a>
 
-                <p><span class="gc">@controllers.DateFormat(item.addTime.get)</span></p>
+                <p><span class="gc">@Utils.timestampFormat(item.addTime.get)</span></p>
                 <!--</dd>-->
             </div>
         </div>
@@ -160,7 +159,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
             }
             @for(num <-page.nums){
             @if(num==page.currentPage){
-            <a class="current" href="#">@num</a>
+            <span class="current" >@num</span>
             }else {
 
             <a href="@controllers.routes.Forums.forum(num)">@num</a>
