--- a/app/views/goods/getComments.scala.html
+++ b/app/views/goods/getComments.scala.html
@@ -28,7 +28,7 @@
 
         @for(num <-page.nums){
         @if(num==page.currentPage){
-        <span  class="current" href="#">@page.currentPage</span>
+        <span  class="current" >@page.currentPage</span>
         }else {
         @if(num!=0){
         <a class="commentPage" href="javascript:void(0)" data-goodsid="@goodsId" data-page="@num">@num</a>
