--- a/app/views/pages/jie.scala.html
+++ b/app/views/pages/jie.scala.html
@@ -70,7 +70,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 }
                 @for(num <-page.nums){
                 @if(num==page.currentPage){
-                <a class="current" href="#">@num</a>
+                <span class="current">@num</span>
                 }else {
                 <a href="@controllers.routes.Pages.jie(sortBy,num)">@num</a>
                 }
