--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -69,7 +69,7 @@ title =  "特色馆_食美特，爱美食爱生活"
                 }
                 @for(num <-page.nums){
                 @if(num==page.currentPage){
-                <a class="current" href="#">@num</a>
+                <span class="current">@num</span>
                 }else {
                 <a href="@controllers.routes.Pages.miss(sortBy,num)">@num</a>
                 }
