--- a/app/views/themes/likes.scala.html
+++ b/app/views/themes/likes.scala.html
@@ -147,7 +147,7 @@ description =theme.intro.get
         }
         @for(num <-page.nums){
         @if(num==page.currentPage){
-        <a class="current" href="#">@num</a>
+        <span class="current">@num</span>
         }else {
         <a href="@controllers.routes.Themes.likes(theme.id.get,num)">@num</a>
         }
