--- a/app/views/users/forum.scala.html
+++ b/app/views/users/forum.scala.html
@@ -1,4 +1,5 @@
 @(user:Option[models.user.User],author:models.user.User,page:Page[models.forum.Topic],t:String,topics:List[(Long, String, String, Long, String, Int, Int, Int)],authorStatic:models.user.UserStatic)
+@import _root_.utils.Utils
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -48,11 +49,11 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                     <li class="clearfix">
                                         <div class="col-left">
                                             <div class="re-count">@item.replyNum / @item.viewNum</div>
-                                            <!--<div class="re-count">30<span class="fs12 gc"> / 2045</span></div>-->
+
                                             <a class="u-reply g-daren" href="@controllers.users.routes.Users.home(item.uid)" target="_blank">
                                                 <span class="inlineblock ofh">@item.uname</span>
                                             </a>
-                                            <!--<span class="gc">@controllers.DateFormat(item.addTime.get)</span>-->
+
                                         </div>
                                         <div class="col-right">
                                             <div class="topic-row clearfix">
@@ -84,7 +85,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                                         <!--<i class="i-daren">达人</i>-->
                                                     </a>
 
-                                                    <p><span class="gc">@controllers.DateFormat(item.addTime.get)</span></p>
+                                                    <p><span class="gc">@Utils.timestampFormat(item.addTime.get)</span></p>
                                                     @if(t=="love"){
                                                     <div style="float: left" class='followed-btn'>已关注<span class='mr5 ml5'>|</span><a rel='removefollow' data-followtype='1' data-topictitle="@item.title" data-topicid="@item.id.get">取消</a></div>
                                                     }
@@ -120,7 +121,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 }
                                 @for(num <-page.nums){
                                 @if(num==page.currentPage){
-                                <a class="current" href="#">@num</a>
+                                <span class="current">@num</span>
                                 }else {
                                 <a href="@controllers.users.routes.Users.forum(author.id.get,t,num)">@num</a>
                                 }
