--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -82,7 +82,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 }
                                 @for(num <-page.nums){
                                 @if(num==page.currentPage){
-                                <a class="current" href="#">@num</a>
+                                <span class="current">@num</span>
                                 }else {
                                 <a href="@controllers.users.routes.Users.theme(author.id.get,t,num)">@num</a>
                                 }
