--- a/app/views/admin/users/editUserRebate.scala.html
+++ b/app/views/admin/users/editUserRebate.scala.html
@@ -78,9 +78,13 @@
                         </div>
 
                         <div class="control-group">
-                            <label class="control-label" for="seoTitle">处理结果</label>
+                            <label class="control-label">处理结果</label>
                             <div class="controls">
-                                <input type="text" class="input-xlarge" id="seoTitle" name="handleResult" value='@form("handleResult").value' placeholder="handle result" required="required">
+                                <select name="handleResult" id="handleResult">
+                                    @for(result<-models.user.HandleResult.values){
+                                    <option value="@result" @(if(form("handleResult").value.getOrElse("") == result) {"selected"})>@result</option>
+                                    }
+                                </select>
                             </div>
                         </div>
                         <div class="control-group">
