--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -103,7 +103,7 @@
                     <ul class="dropdown set-dropdown" >
                         <li><a href="@controllers.users.routes.Users.home(user.get.id.get)">我的主页</a></li>
                         <li><a href="@controllers.users.routes.UsersAccount.base">帐号设置</a></li>
-                        <li><a href="@controllers.users.routes.UsersCommission.myCredits"><span class="rc">我的返利</span></a></li>
+                        <li><a href="@controllers.users.routes.UsersCommission.myCredits(1)"><span class="rc">我的返利</span></a></li>
                         <li class="last"><a href="@controllers.users.routes.UsersRegLogin.logout">退出</a></li>
                     </ul>
                 </div>
