--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -7,7 +7,7 @@ user
         <div class="side-nav">
             <h2>帐号设置</h2>
             <ul>
-                <li><a href="@controllers.users.routes.UsersCommission.myCredits">我的集分宝</a></li>
+                <li><a href="@controllers.users.routes.UsersCommission.myCredits(1)">我的集分宝</a></li>
                 <li><a href="@controllers.users.routes.UsersCommission.myShiDou">我的食豆</a></li>
                 <li><a href="@controllers.users.routes.UsersCommission.myAward">我的奖品</a></li>
                 <li><a class="on" href="@controllers.users.routes.UsersCommission.invite(1)">邀请有奖</a></li>
