--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -356,6 +356,7 @@ table {
     vertical-align: top;
     border-top: 1px solid #dddddd;
     border-left: 1px solid #dddddd;
+    text-align: center;
 }
 
 .table th {
