--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -5,6 +5,7 @@
         <title>smeite.com Admin</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
     <link rel="stylesheet" href="/assets/admin/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/admin/css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="/assets/admin/css/unicorn.main.css" />
