change handle_result from string to int,and fix some bugs with user credits and shidou

--- a/app/views/admin/users/editInvitePrize.scala.html
+++ b/app/views/admin/users/editInvitePrize.scala.html
@@ -29,6 +29,7 @@
                     <form class=" form-horizontal" id="myForm"  method="post" action="@controllers.admin.routes.Users.saveInvitePrize">
 
                         <input type="hidden" name="id" value='@form("id").value'>
+                        <input type="hidden" name="uid" value='@form("uid").value'>
                         <input type="hidden" name="name" value='@form("name").value'>
                         <input type="hidden" name="alipay" value='@form("alipay").value'>
                         <input type="hidden" name="num" value='@form("num").value'>
@@ -81,7 +82,7 @@
                             <div class="controls">
                                 <select name="handleResult" id="handleResult">
                                     @for(result<-models.user.HandleResult.values){
-                                    <option value="@result" @(if(form("handleResult").value.getOrElse("") == result) {"selected"})>@result</option>
+                                    <option value="@result.id" @(if(form("handleResult").value.getOrElse("") == result) {"selected"})>@result</option>
                                     }
                                 </select>
                             </div>
