--- a/app/views/admin/users/filterUserRebates.scala.html
+++ b/app/views/admin/users/filterUserRebates.scala.html
@@ -115,7 +115,7 @@
                         <span class="label label-warning">失败</span>
                         }
                     </td>
-                    <td>@item.handleResult</td>
+                    <td>@models.user.HandleResult(item.handleResult)</td>
 
                     <td>
 
