--- a/app/views/admin/users/filterExchangeShiDous.scala.html
+++ b/app/views/admin/users/filterExchangeShiDous.scala.html
@@ -102,7 +102,7 @@
                                     <span class="label label-warning">兑换失败</span>
                                     }
                                 </td>
-                                <td>@exchangeShiDou.handleResult</td>
+                                <td>@models.user.HandleResult(exchangeShiDou.handleResult)</td>
                                 <td>@exchangeShiDou.handleTime</td>
                                 <td>
 
