--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -22,7 +22,7 @@ user
                         <li>1、您每邀请一个朋友加入食美特，（登录并成功返利），最高可获得<strong class="rc">1000个集分宝</strong>的邀请奖励</li>
                         <li>2、邀请好友必须是新用户（即以前没登录过食美特，或者没有注册过食美特），如果她已是食美特老用户了，那么是没有奖励的</li>
                         <li>3、您可以把您的专用邀请链接通过任何方式发给您的朋友，例如，QQ好友，qq群、阿里旺旺、论坛、社区等</li>
-                        <li>4、邀请奖金分3次发放：当好友累计返利达到100个集分宝时奖200个；当累计返利到1000个集分宝时再奖300个；当累计返利到5000个集分宝时再奖500个集分宝；</li>
+                        <li>4、邀请奖金分3次发放：当好友的集分宝累计达到100个时奖200个；当集分宝累计达到1000个时再奖300个；当集分宝累计达到5000个集分宝时再奖500个集分宝；</li>
 
                         <li><strong class="alert">禁作弊提醒</strong>：严禁自己邀请自己、刷小号等作弊行为，一旦反作弊系统监测到作弊行为，将拉黑账号处理，邀请也无效</li>
 
@@ -81,7 +81,9 @@ user
                                   @if(user.get.alipay.isEmpty || user.get.alipay.get.trim ==""){
                                 您还没有填写支付宝，<a href="@controllers.users.routes.UsersAccount.payment">现在就去填写吧</a>
                                 }else{
-                                <a rel="getInvitePrizes" class="getInvitePrizes" data-credits="@item.credits" data-uid="@user.get.id.get" data-inviteeid="@item.id.get">查看详情</a>
+                                @if(item.credits > 99){
+                                <a rel="getInvitePrizes" class="getInvitePrizes" data-credits="@item.credits" data-uid="@user.get.id.get" data-inviteeid="@item.id.get"></a>
+                                }
                                 }
                             </td>
                         </tr>
