--- a/app/views/users/commission/myShiDou.scala.html
+++ b/app/views/users/commission/myShiDou.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],exchangeForm:Form[Int],msg:String ="")
+@(user:Option[models.user.User],exchangeForm:Form[Int],page:Page[models.user.UserExchangeShiDou],msg:String ="")
 @views.html.template(
 user
 )(css="/assets/css/template/user.setting.css") {
