adjust user myshidou

--- a/app/views/users/account/base.scala.html
+++ b/app/views/users/account/base.scala.html
@@ -56,7 +56,7 @@ user
                     </div>
                     <div class="form-row">
                         <label>QQ号：</label>
-                        <input type="text" class="base-input" name="weixin" id="weixin" value='@baseForm("weixin").value'
+                        <input type="text" class="base-input" name="qq" id="qq" value='@baseForm("qq").value'
                                placeholder="填写QQ号，可能会有意外惊喜哦"><span class="ml10 gc">仅自己可见</span>
                     </div>
                     <div class="form-row">
