--- a/app/views/users/commission/myShiDou.scala.html
+++ b/app/views/users/commission/myShiDou.scala.html
@@ -16,7 +16,7 @@ user
         <div class="main-content">
             <div class="shiDou">
                 <div class="shiDou_info mb20">
-                    <div class="credits_info">您已经获得<span>@{user.get.shiDou}</span>个食豆（已兑换<span>@user.get.withdrawShiDou</span>，值<span>￥@(user.get.withdrawShiDou/100.0)</span>元）还可以兑换的数量<span>@{user.get.shiDou - user.get.withdrawShiDou}</span></div>
+                    <div class="credits_info">您已经获得<span>@{user.get.shiDou}</span>个食豆（已成功兑换<span>@user.get.withdrawShiDou</span>，值<span>￥@(user.get.withdrawShiDou/100.0)</span>元）</span></div>
                 </div>
 
                 <div class="title">申请兑换</div>
