--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -109,8 +109,15 @@ description = goods.intro
                  <div class="operate">
 
                          <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
-                        <a class="btn-share" href="javascript:;" data-sharetxt="我在食美特发现了这个宝贝，我很喜欢，分享给大家 :@goods.name  " data-sharelink="@controllers.routes.Goods.view(goods.id.get)" data-sharepic='@(goods.pic+"_310x310.jpg")' title="分享">分享</a>
+                     <div class="share-link">
+                         <label class="fl l20 gc">分享到：</label>
+                         <a class="s-sina fl" href="javascript:;" alt="分享到新浪微博">新浪微博</a>
+                         <a class="s-qzone fl" href="javascript:;" alt="分享到QQ空间">QQ空间</a>
+                         <a class="s-tencent fl" href="javascript:;" alt="分享到腾讯微博">腾讯微博</a>
+                         <a class="s-douban fl" href="javascript:;" alt="分享到豆瓣">豆瓣</a>
+                         <a class="s-renren fl" href="javascript:;" alt="分享到人人网">人人网</a>
 
+                     </div>
                  </div>
              </div>
 
