--- a/app/views/users/baobei.scala.html
+++ b/app/views/users/baobei.scala.html
@@ -34,24 +34,21 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 					<a rel="shareGoods" class="bbl-btn ml10" href="javascript:;">+ 分享宝贝</a>
 					</span>
                 </div>
-                <ul class="baobei clearfix">
+                <ul class="goods-list clearfix">
                     @for((goods,i)<-page.items.view.zipWithIndex){
                     <li class="clearfix @if((i+1)%3==0){last}" >
-                        <div class="baobei-wrap">
-                            <div class="baobei-pic">
+                        <div class="goods-item">
+                            <div class="goods-pic">
                                 <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
                                     <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
                                 </a>
-                                <a class="ilike-del" href="javascript:;" data-type="4" data-proid="@goods.id.get" style="display: none; ">喜欢-1</a>
-                                <a class="ilike-m" href="javascript:;" data-prourl="@goods.detailUrl" data-proname="@goods.name" data-type="0" data-proid="@goods.id.get" style="display: none; ">
-                                    <i></i>
-                                    <span class="ilikeCount" data-val="@goods.loveNum">喜欢(@goods.loveNum)</span>
-                                </a>
+                                <a class="ilike-del" href="javascript:;" data-type="4" data-proid="@goods.id.get">喜欢-1</a>
+
                             </div>
-                            <div class="baobei-title ofh inlineblock">
+                            <div class="goods-title ofh inlineblock">
                                 @goods.name
                             </div>
-                            <div class="baobei-stat">
+                            <div class="goods-stat">
                                 <span class="mr10">@goods.loveNum</span>
                                 <span>￥@goods.price</span>
                             </div>
