--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -19,12 +19,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 <!--nav  end -->
 @if(author.status==4){
 <div class="user-bd clearfix">
-
         <div class="main box-shadow fs14 tac" style="padding-top:110px;padding-bottom:110px;background-color: #fff">
-            食美特城管大队：<span style="color:#E26">Ta正在小黑屋中写检查呢！
-			</span>
-
-    </div>
+            食美特城管大队：<span style="color:#E26">Ta正在小黑屋中写检查呢！</span>
+       </div>
 
 </div>
 }else{
@@ -33,30 +30,34 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
     <div class="main box-shadow plr15">
         <div class="main-title clearfix">
             <h2>
-                最近喜欢的宝贝
+                最近分享的宝贝
             </h2>
             <span class="fl ml5 mr5">|</span>
-            <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fl">分享的宝贝(@authorStatic.postBaobeiNum)</a>
+            <a href='@controllers.users.routes.Users.baobei(author.id.get,"love",1)' class="fl">喜欢的宝贝(@authorStatic.loveBaobeiNum)</a>
             <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fr">查看全部@(authorStatic.loveBaobeiNum+authorStatic.postBaobeiNum)件宝贝&gt;</a>
         </div>
-        <ul class="baobei clearfix">
+
+        @if(goodses.items == 0){
+            @if(!user.isEmpty && user.get.id==author.id){
+               您还没有分享的宝贝，我们很期待您的分享哦！<a rel="shareGoods" href="javascript:;" class="hd-share-goods">发布宝贝</a>
+                }else{  Ta 很懒，还没有分享宝贝  }
+
+        }else{
+        <ul class="goods-list clearfix">
             @for((goods,i)<-goodses.items.view.zipWithIndex){
             <li class="clearfix @if((i+1)%3==0){last}" >
-                <div class="baobei-wrap">
-                    <div class="baobei-pic">
+                <div class="goods-item">
+                    <div class="goods-pic">
                         <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
                             <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
                         </a>
-                        <a class="ilike-del" href="javascript:;" data-type="4" data-proid="@goods.id.get" style="display: none; ">喜欢-1</a>
-                        <a class="ilike-m" href="javascript:;" data-prourl="@goods.detailUrl" data-proname="@goods.name" data-type="0" data-proid="@goods.id.get" style="display: none; ">
-                            <i></i>
-                            <span class="ilikeCount" data-val="@goods.loveNum">喜欢(@goods.loveNum)</span>
-                        </a>
+                        <a class="ilike-del"  href="javascript:;" data-type="share" data-proid="@goods.id.get">喜欢-1</a>
+
                     </div>
-                    <div class="baobei-title ofh inlineblock">
+                    <div class="goods-title ofh inlineblock">
                         @goods.name
                     </div>
-                    <div class="baobei-stat">
+                    <div class="goods-stat">
                         <span class="mr10">@goods.loveNum</span>
                         <span>￥@goods.price</span>
                     </div>
@@ -67,30 +68,34 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             }
 
         </ul>
+        }
     </div>
     <!--baobei box end-->
     <div class="main box-shadow plr15">
         <div class="main-title clearfix">
             <h2>
-                最近喜欢的主题
+                最近创作的主题
             </h2>
             <span class="fl ml5 mr5">|</span>
-            <a href='@controllers.users.routes.Users.theme(author.id.get,"my",1)' class="fl">创作的主题(@authorStatic.postThemeNum)</a>
-            <a href='@controllers.users.routes.Users.theme(author.id.get,"love",1)' class="fr">查看全部@(authorStatic.postThemeNum+authorStatic.loveThemeNum)个主题</a>
+            <a href='@controllers.users.routes.Users.theme(author.id.get,"love",1)' class="fl">最新喜欢的主题(@authorStatic.loveThemeNum)</a>
+            <a href='@controllers.users.routes.Users.theme(author.id.get,"my",1)' class="fr">查看全部@(authorStatic.postThemeNum+authorStatic.loveThemeNum)个主题</a>
         </div>
+        @if(page.items.length==0){
+           @if(!user.isEmpty && user.get.id==author.id){
+                您还没有创作主题，我们很期待您的精彩创作哦！<a href="/theme/edit" rel="createTheme" class="hd-create-topic">创作主题</a>
+              }else{ Ta 很懒，还没有分享宝贝 }
+        }else{
         <div class="theme-list clearfix">
-
             @for((item,i)<-page.items.view.zipWithIndex){
-
             <div class="theme-item @if(((i+1)%3)==0){last} ">
                 <div class="theme-pic clearfix">
 
                     <a href="@controllers.routes.Themes.view(item._1._1)" class="pic" target="_blank">
                         @for((img,i)<-item._2.view.zipWithIndex){
                         @if(i==0){
-                        <img class="b-img" src='@(img.get+"_210x210.jpg")' width="210"height="210" >
+                        <img class="b-img"  @if(!img.isEmpty){src='@(img.get+"_210x210.jpg")' width="210"height="210"}else {src="/assets/ui/blank.gif"} >
                         }else {
-                        <img class="s-img" src='@(img.get+"_60x60.jpg")' width="50" height="50">
+                        <img class="s-img" @if(!img.isEmpty){src='@(img.get+"_60x60.jpg")' width="50" height="50"}else {src="/assets/ui/blank.gif"} >
                         }
                         }
 
@@ -99,17 +104,15 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 </div>
                 <h3><a href="@controllers.routes.Themes.view(item._1._1)" target="_blank">@item._1._2</a></h3>
                 <div class="theme-state">
-
                     <span>@item._1._4 人关注</span>
-
-
                 </div>
-                <a class="ilike-del" href="javascript:;" data-type="5" data-proid="@item._1._1" style="display:none; ">删除</a>
+                <a class="ilike-del" href="javascript:;" data-type="5" data-proid="@item._1._1">删除</a>
             </div>
             }
 
 
         </div>
+        }
     </div>
     <!--theme 喜欢的主题 end-->
 
