--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -1170,7 +1170,15 @@ input:-moz-placeholder { font-size:12px; }
 .goods-wall { position:relative;min-height:500px;margin-top:20px; }
 .goods { position:absolute;width:210px;padding:10px;color:#999;background-color:white;/*-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;*/box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s; }
 .goods .goods-pic { position:relative;width:210px;overflow:hidden; }
-.goods .goods-pic .pic-link { display:block;text-align:center; }
+.goods .goods-pic .pic-link {
+    display: table-cell;
+    width: 210px;
+    text-align: center;
+    vertical-align: middle;
+    height: 210px;
+    *display:block;
+    *font-size: 183px;
+}
 .goods .goods-stat { height:20px;line-height:20px;padding-top: 10px; }
 .goods .comments { padding-top:5px;overflow: hidden;line-height: 18px}
 .goods .comments li { width:205px;line-height:18px;padding:10px 0 0 5px;/*white-space:nowrap;*/word-wrap:normal;word-break:normal;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden; }
