--- a/public/assets/css/template/user.css
+++ b/public/assets/css/template/user.css
@@ -147,24 +147,24 @@ html {
 
 
 /*user 宝贝 list start*/
-.baobei { margin-top: 15px;}
-.baobei li { position:relative;margin-right:10px;margin-bottom:20px;float:left;color:#999; overflow:hidden;}
-.last{margin-right:0px;}
-.baobei li .baobei-wrap{
+.goods-list { margin-top: 15px;}
+.goods-list li { position:relative;margin-right:10px;margin-bottom:20px;float:left;color:#999; overflow:hidden;}
+.last{margin-right:0;}
+.goods-list li .goods-item{
     border: 1px solid #f1f1f1;
     width:210px;height:260px;
     padding: 5px;;
 }
-.baobei li .baobei-title{padding-top:6px;height:20px;line-height:20px;color:#999;width:210px;}
-.baobei li .baobei-pic { background:#fff;width:210px;height:210px;overflow:hidden; }
-.baobei li .baobei-pic img {opacity:0.9;filter:alpha(opacity=90);}
-.baobei li .baobei-pic .pic-link{display: table-cell;vertical-align:middle;text-align:center;*display: block;*font-size:183px;*font-family:Arial;width:210px;height:210px;background:#fff url(images/bg-photo.gif) repeat-y;}
-.baobei li .baobei-pic .pic-link span{background-color:#ccc;}
-.baobei li .baobei-stat { color:#999;height:20px;line-height:20px;padding:0 0 3px 10px;background:url(images/grayHeart2.png) 0px 5px no-repeat;font-family:'Microsoft YaHei','黑体'; }
-.cur-baobei .baobei-pic img {opacity:1;filter:alpha(opacity=100);}
-.cur-baoebei .baobei-title{color:#333;}
-.cur-baobei .baobei-stat { color:#333; }
-/*user baobei page start*/
+.goods-list li .goods-title{padding-top:6px;height:20px;line-height:20px;color:#999;width:210px;}
+.goods-list li .goods-pic { background:#fff;width:210px;height:210px;overflow:hidden; }
+.goods-list li .goods-pic img {opacity:0.9;filter:alpha(opacity=90);}
+.goods-list li .goods-pic .pic-link{display: table-cell;vertical-align:middle;text-align:center;*display: block;*font-size:183px;*font-family:Arial;width:210px;height:210px;background:#fff url(images/bg-photo.gif) repeat-y;}
+.goods-list li .goods-pic .pic-link span{background-color:#ccc;}
+.goods-list li .goods-stat { color:#999;height:20px;line-height:20px;padding:0 0 3px 10px;background:url(images/grayHeart2.png) 0px 5px no-repeat;font-family:'Microsoft YaHei','黑体'; }
+.cur-goods .goods-pic img {opacity:1;filter:alpha(opacity=100);}
+.cur-goods .goods-title{color:#333;}
+.cur-goods .goods-stat { color:#333; }
+/*user goods page start*/
 
 /*user 主题 list */
 .theme-list {
