add goods delete and theme delete

--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -29,7 +29,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
                 <a id="J_UserThemeStyleOpenBtn" class="bgr-btn">美化</a>
             </div>
             <div class="fr">
-                <a class="del" id="J_UserThemeDel">删除主题</a>
+                <a class="del" id="J_UserThemeDel" data-type="my" data-themeid="@theme.id.get">删除主题</a>
             </div>
         </div>
         <div class="user-theme-style clearfix" id="J_UserThemeStyle">
